# commeator

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dioxus.toml  Dockerfile.server  Dockerfile.web  compose.yaml  justfile
.github/workflows/: clippy.yml
assets/: tailwind.css
client/: .env  Cargo.toml  Dioxus.toml  Dockerfile  build.rs
client/src/: backend.rs  centrifugo.rs  desktop.rs  main.rs  verify_user_jwt.rs
client/src/auth/: callback.rs  close.rs  mod.rs  redirect.rs  verify_user.rs
client/src/backend/: api_data.rs  endpoints.rs  jwt.rs  kratos.rs  local_storage.rs  mod.rs
client/src/components/: avatar.rs  centered_form.rs  header.rs  icon_button.rs  logout.rs  mod.rs  nav_bar.rs  spinner.rs
client/src/macros/: mod.rs  verify_user.rs  verify_uuid.rs
client/src/pages/: home.rs  mod.rs
client/src/pages/auth/: callback.rs  login.rs  profile_setup.rs
client/src/pages/panels/: api_data.rs  mod.rs  nav_bar.rs
client/src/pages/panels/left/: chats.rs  item.rs  mod.rs  users.rs
client/src/pages/panels/right/: chat.rs  mod.rs  new_group.rs  profile.rs
client/src/pages/panels/right/settings/: account.rs
client/src/panels/: mod.rs
client/src/panels/left/: chats.rs  mod.rs  settings.rs  users.rs
client/src/panels/right/: chat.rs  header.rs  mod.rs  new_group.rs  profile.rs  user.rs
client/src/panels/right/settings/: account.rs  mod.rs
client/src/views/: chats.rs  home.rs  mod.rs  settings.rs  users.rs
client/src/views/chats/: chat.rs  chats.rs  mod.rs
client/src/views/groups/: mod.rs  new_group.rs
client/src/views/settings/: account.rs  mod.rs  settings.rs
client/src/views/users/: mod.rs  user.rs  users.rs
config/: .gitignore  endpoints.example.json  endpoints.k8s.json
config/centrifugo/: .gitignore  config.example.yaml  config.yaml
config/kratos/: .gitignore  kratos.example.yaml  kratos.example.yml
config/macos/: Commeator.entitlements  Info.plist
config/psql/: env.example
config/server/: env.example
config/utils/: env
config/web/: env.example  nginx.conf
kratos/: identity.schema.json  kratos.yml
kubernetes/: hydra.yaml  server.yaml  web.yaml
kubernetes/base/: .gitignore  centrifugo.yaml  kratos.yaml  kustomization.yaml  postgres.yaml  server.yaml  web.yaml
kubernetes/overlays/dev/: .gitignore  kustomization.yaml  load_balancer.yaml
kubernetes/overlays/prod/: .gitignore  ingress.yaml  kustomization.yaml  server.patch.yaml  web.patch.yaml
migration/: Cargo.toml
migration/src/: lib.rs  m20251011_133950_users.rs  m20251011_135939_chats.rs  m20251011_140310_chat_members.rs  m20251011_141157_messages.rs  m20251018_043854_message_reply.rs
scripts/: p_macos.sh
server/: .dockerignore  .env  .env.example  .gitignore  Cargo.toml
server/neocurl/: ncurl.py
server/src/: chats.rs  conn.rs  db.rs  error.rs  jwt.rs  main.rs  messages.rs  mod.rs  natives.rs  users.rs  verify_kratos.rs
server/src/entities/: chat_members.rs  chats.rs  messages.rs  mod.rs  prelude.rs  users.rs
src/: auth.rs  config.rs  main.rs
src/backend/: chats.rs  jwt.rs  messages.rs  mod.rs  users.rs  verify_kratos.rs
src/backend/entities/: chat_members.rs  chats.rs  messages.rs  users.rs
src/components/: centered_form.rs  icon_button.rs  logout.rs  mod.rs
src/pages/: error.rs  home.rs  landing.rs  login.rs  mod.rs  registration.rs  state.rs
src/pages/auth/: callback.rs  error.rs  login.rs  profile_setup.rs
src/pages/panels/: api_data.rs  chat.rs  chats.rs  empty.rs  mod.rs  nav_bar.rs  profile.rs  settings.rs  settings_tab.rs  users.rs
src/pages/panels/left/: chats.rs  settings.rs  users.rs
src/pages/panels/right/: chat.rs  header.rs  mod.rs  profile.rs
src/pages/panels/right/settings/: mod.rs
utils/: .env  Cargo.toml  build.rs
utils/src/: auth.rs  config.rs  data.rs  lib.rs  requests.rs  updates.rs
