[package]
name = "messenger"
version = "0.1.0"
authors = ["Levi Lovie <leviiloviee@gmail.com>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.7.0-alpha.3", features = ["router", "fullstack"] }
gloo-net = "0.6.0"
serde = { version = "1.0.225", features = ["derive"] }
wasm-bindgen-futures = "0.4.53"
web-sys = "0.3.80"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
