[package]
name = "commeator"
version = "0.1.0"
authors = ["Levi Lovie <leviiloviee@gmail.com>"]
edition = "2021"

[dependencies]
utils = { path = "../utils", features = ["server"] }
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
dioxus = { version = "0.7.0-rc.1", features = ["router"] }
gloo-net = "0.6.0"
gloo-timers = { version = "0.3.0", features = ["futures"] }
md5 = "0.8.0"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
wasm-bindgen-futures = "0.4.53"
web-sys = "0.3.80"

[features]
default = ["dioxus/web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
