[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.18.1", features = ["serde", "v3", "v4"] }

[dependencies.sea-orm-migration]
version = "1.1.0"
features = [ "runtime-tokio-rustls", "sqlx-postgres" ]
