[package]
name = "utils"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
dotenv = "0.15.0"
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
reqwest = { version = "0.12.24", optional = true, features = ["json"] }
gloo-net = { version = "0.6.0", optional = true }

[features]
server = ["dep:reqwest"]
client = ["dep:gloo-net"]
