[package]
name = "utils"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
async-once-cell = "0.5.4"
dotenvy = "0.15.7"
gloo-net = { version = "0.6.0", optional = true }
reqwest = { version = "0.12.24", optional = true, features = ["json"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
tracing = "0.1.41"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
web-sys = { version = "0.3.81", optional = true }

[build-dependencies]
dotenvy = "0.15.7"

[features]
server = ["dep:reqwest"]
client = ["dep:gloo-net", "dep:web-sys"]
