[package]
name = "utils"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0.100"
async-once-cell = "0.5.4"
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
tracing = "0.1.41"
urlencoding = "2.1.3"
uuid = { version = "1.18.1", features = ["serde", "v4"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12.24", features = ["json"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = "0.6.0"
gloo-timers = { version = "0.3.0", features = ["futures"] }
web-sys = "0.3.81"

[build-dependencies]
dotenvy = "0.15.7"

[features]
server = []
client = []
